--- a/e621rooshow/MainWindow.xaml
+++ b/e621rooshow/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:e621rooshow"
         mc:Ignorable="d"
-        Title="Matthew Roo's e621 SlideShow!" Height="350" Width="525">
+        Title="Matthew Roo's e621 SlideShow!" Height="350" Width="525" KeyUp="Window_KeyUp">
     <Grid>
         <Image RenderOptions.BitmapScalingMode="NearestNeighbor" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  RenderOptions.EdgeMode="Aliased" x:Name="Image">
             
