--- a/e621rooshow/App.xaml
+++ b/e621rooshow/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="e621rooshow.App"
+﻿<Application x:Class="E621RooShow.Windows.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:e621rooshow"
+             xmlns:local="clr-namespace:E621RooShow.Windows"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
