--- a/e621rooshow/MainWindow.xaml
+++ b/e621rooshow/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:custom="clr-namespace:E621RooShow.Controls.Windows;assembly=E621RooShow.Windows.Controls"
         Title="Matthew Roo's e621 SlideShow!" Height="350" Width="525" KeyUp="Window_KeyUp">
     <Grid>
-        <Label Name="traceLabel" Visibility="{Binding ShowStatus}" Background="#00FF0000" Panel.ZIndex="1" Foreground="#FF5DFF00" Content="{Binding Listener.Text}"  />
+        <Label Name="traceLabel" Visibility="{Binding ShowStatus}" Background="#00FF0000" Panel.ZIndex="1" Foreground="#FF5DFF00" Content="{Binding Listener.Text}" HorizontalAlignment="Left" VerticalAlignment="Top"  />
         <Border>
             <custom:PanAndZoomImage  RenderTransformOrigin="0.5,0.5" RenderOptions.BitmapScalingMode="Fant" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  RenderOptions.EdgeMode="Aliased" x:Name="Image">
             </custom:PanAndZoomImage>
